# MinesweeperSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: board.c  board.h  board_analyzer.c  board_analyzer.h  commander.c  commander.h  common.h  error_codes.h  hard_coded_config.h  logger.c  logger.h  matrix.c  matrix.h  minesweeper_solver.c  minesweeper_solver.h  minesweeper_solver_utils.c  minesweeper_solver_utils.h
